Homework02 finalized design and features

--- a/Homework02/NickolasGettel02/Form1.resx
+++ b/Homework02/NickolasGettel02/Form1.resx
@@ -57,4 +57,118 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAHwAAAB8CAYAAACrHtS+AAAABGdBTUEAALGPC/xhBQAAAAlwSFlzAAAL
+        DwAACw8BkvkDpQAAGRNJREFUeF7tnXuMVNd9xwc7CXGgNjFxjI0oYGMeMWBYlp19wDoY87CNA8F2DMTY
+        xjaP8Ngsz2Wf4KUtJjWNjNsqbtNHkrrYtJXaqnk1qqooVh9yGqVR07qqVMmNoqqqJUt1otYG7+3v87v3
+        d/dwfRZ2d2bwPbPzx1cz85uZO3fO9/ye51VY076uhjEEr7CG6oVXWEP1wiscK1j54J5xwPdetcIrHAsY
+        a0QbvMJqx6wlG6/icfVjT69Y/fCBe3ju6wB8rto6hldYzTCyt7WdnP3R+if/q+7+9o28/vj8jVf7Ppd9
+        Hjq8wmpH9O7bH7iheecrVy3eFXWc+dYsZK4mG8Gb2784f96Kp7724KP75mU/Eyq8wmqFEVm/ofNAYcmh
+        6KMt7f/6t3//6rW+zyzffGz9hxc8NnBt3RN/QwdxPxMyvMKQMZQWmvyFr/zJjZOKu14f13QimnJnx1+7
+        nzGzDtnjF+84T6fgufte6PAKqxFG2Py1+w8Xlh6MCsW+aObd+/8i+z5mfGL9zjcL9T3R5OY9P/r5z976
+        iH2mGuAVhorte9umdHb3LeK5T9P/739/9qHJLW2vFhpORIWG7mjGis+/iNzMuPn2QsPx6Oql+yM6B/Jq
+        0W7gFYYG1+8SZA31PmkYRBaa+i8U6ruiW1Z1fBW5Eaq+vb5D3u+NJjbsfaPt6RfSgI5r1IK2nCAlbOPJ
+        J/G92cjbCJ97T8fJQkNXVGjpeVsJX3Pod5ADfPvEpXt+UmjsjQqNHdHU5e1/atdwNfyZ588GHcB5haHB
+        CKl7qG8v/rm4qb+N10Y0OH/hwlWxuU4Il8db1va+YO8vXNfVOa5OtJ/3uMaDPU8ht2tbitbR9+ztvA5V
+        273C0GCkfOK+7kP43xuX7X/FUikjHfOswZj47pjwzpRwUrOPtRz8MVpfKB6Ormtq/28z56B504nNpGg3
+        NOw4a7JQ4RWGBiNcI3AJyMbXt5/HX7vv4d/Vfxd7BgrFjvOF4tFBDd92ag0pWKHp+AUI1w4TRarBaDqa
+        j0//xj/+5CZk1ol4dK1ICPAKQ4BrUl3Cya8L9Z1pBG7vYbIhWUltPnKh0NARzbi753d5b9bKtmcLxUTz
+        5bv4euR0GjpPoa43Kj58/KB7PZfoX33+t67d9bnt0+x1nuEVhgYjQU26RNiY62vqd79l/hYQkas5N8JF
+        k41wTdXoDGh+Q68WW9Bw8nBeuxU5l2jM/rQ5xTNT5y777tYnd6tFybtv9wrzDiLlx3Z3NNlrI1yDNoIy
+        SJX0at49h/qQE7BNaW37K5HLe5KSNXWJhkseLoRjpukchSbpDOIOJhQPvvm9H742WTsPKZp0BLuO/Q5Y
+        1HL/ruumLnkHNK36zEpkIQRyXmHe8eK5b18ztbj1x9mRLoIrNLfQ3HOeStmk4t5/QzO14IK2NvbFnQHC
+        i32xhov//mD93rgjNJ6KfmHpvh/web6LmacDuPk4j/Ma1p6ecPOiCLJX3vfZVvce8g6vMO+AkOtb2n/K
+        8Cb5s8nxuUoeJrupV7S4K1q8/sDjlEc1x8ZPN/a9q4SLr565uvvrd+0884wGbM0nL4y741B0947Trz/9
+        +9/9UmHuzgFycsvHjdDb61b2f+QXGyIIv6Np9Wfd90KAVxgCGPggmIIQi6j3HTk+nZTq6mVi1tFy8b+Y
+        8u/84N8XqdlWcy9RepM8LtgXLXzkN6KV+/9An2uwJyTve+7r0ZZjL8vzg2IFjqb5OGhZs2kdZH9oWkt0
+        65I1v4msFqVXCGZO7TEOwsQnLz2Y+tg0n1ZfLRouhFF529hz7rVrP9klZp6yKYR3RqRaM9afGgDIXcJV
+        Jp1pQsP+tyi4pNee3fwaZE+efec/WRAXgt924RXmGWY+59zbcVr9tfjkq+r2RTZViXQMzS409gjhRyTn
+        PhypxmtQ1ilmulOey6NG5V0D8XsCyc8/2HAk2nriG9H4ZfJ9RsskerfRsrqWde1oN1i8fL13lkwI8Arz
+        CFIsdyJC8aHuR8Y374uLKBJs4aPROgI3LZFCeCO59XH5TJegG0BuTDogTRMzr6TXd0UTW/tjE79EfHzj
+        YK0d0tFqtHv6vKZv2T2ECK8wTzCTObV5x19Ov6v9Syb/zJ5T9R+ub3tXtVlTre6I2SkEXLfc2xuh9arV
+        ROYQn0LINWgQJ49i4inEQDh+XQkXM9+8uf8ov4Xvhmy0e90DWz6NLETtBl5hnmCEE3xBIqac11S3KIjE
+        /lpMtPhsNBvClDQJxLQIkyX5IiSartreoab8untPD/Cca9lsFwI0CJ8yt/WHoU+I8ArzBIuC0W7VVgmm
+        KIUiYzBDfTERueTVGqiRYllwhkw13Ee2B0UBLkBSNgvYtOKWmPOFzet6+d1QtRt4hXmCEa5BGlG55MvM
+        NsXc7jrx0rk4h4Zw0WQGRiAMrdZBkoREH7k+NIim4+/Fn5PeUXFrbV1124SZy9+BcKvuhZaKufAK8wTT
+        Ji11KqkEaUcGGPkiosbvxkQxMCKk4bfVd0NiXBq9tFl3ANlalOnS+Wz8LhE5ZH9s3sp/qIb5bV5hnmCE
+        p9OTmg++qxE4gZVot6ZQROAEXkpu4pMVQrg+eshN4XyetC2ps9uMVsw4hM9auFKnQ4WWd2fhFeYRTFvC
+        r+KXtUgCyaLpmos3kl8nWoy2A56rpl9Ouz2Ei4ZTduV3LWBjsITXIftv4BXmBQc7n57c/8Wz6TizTlHS
+        gEzSMNIxiaZVizHlXmKHSbgWYQCWolcJn/HJtj/iN2+ev+qbpGM2SBKy/wZe4fsNa1SqZwyQEKGj4TrQ
+        wZxyI9xMeOqzPWS6r7MBnOXh2mkgnrJrrxJuM1rx3RBuy41qhFcA1qhpcaW+J5pQPPB2cftvv5P6bDXB
+        aDiEkW87RA4bDuGq4UI48QGEJ9OfSMmuv7X5f8j7eV3z4RWANSppEcuCtLgiEXRcPcPPClGDZlgwglz7
+        Ing0XAkfnOA4eVbz6wyaMCTr3mOo8ArzACMdX2qDJLFmC0HUwyFItdwlbqRIvkfHuQThVNiYNePeX6jw
+        CvMAi4Zt1qj6Vo3GgZGFdstzi8pHivf4cDpUQngycALhN81b9nfuvYUMrzAPMA0nSqfqpaRizkmdKJDE
+        05WELIgiNcuQOSxkNdwh3II2Mec1wq8QLHiLy6pCTjKLJS2bZqPwUmGVNvktm9pE0MasVPe+QoZXmBe4
+        Wj6p/sn/UIIx7Zhizb0tSjfTXCKMcLk+o3P8Ntpd0/D3AcxQZdAknsVCvgzp0gG0ju4hbzRwa+ktba/y
+        u1PmtZ4laMveT6jwCvMENt9h3jeFl6Vbn/tDJRktZ6wbLXdLqeWAEt6po2UMlrDQAD/uu7cQ4RXmAea/
+        WT7E1GPmh1+/ovs/dTqSanjFCJfAsEvHw1mkMHdhyyEi9WrZ58UrzAPMf6PZcZTeq7syqNm1dIroupwm
+        HUC4XI81Zfw2c8+nzGl5w4ZG7b5ChVeYF7hanq7ubDwmqZNotw2cWD7uI2800AGUngE615rtp+9raWy9
+        ndLqg5sfm8691Ai/QmAxvhZgWpiFSuAm2q05OGXVchIu0PSvQ1eMvvRn35mEhq/a8OhS7qM2eFJhuBql
+        q00gl6VEkIMPV/NeRsKp5CWp2W2rD57hd/HhzFzleY3wKwBr5Hi1CVodL+uNq2NKUoa0y+BSQZ5W8Xp0
+        Trvl4sxFr02AuIIwLae+HU+AYCCF0qoQp+SNgPDhBHg64zWeyMgoGakZK0a5hxrhVwCm4ZjYdMaLBm/y
+        fDgEjgSaBaDl3RFj8Rap37awVWfA1IK2KwAjPK6pCylKuPjtpgNCkDxi3gcJcwgcoalPwYgcgygdEUuX
+        mO0S+hIjg1eYN5gZnbexv0cJjhf1S3AlhDOoMuoJEEPA/Lhcm+lVmHUIZ6dH7iNkLfcK8wbTcN3hoV60
+        Vme9qOlNtHu0mjwEIFw3/jkesfxY72Hhyq9Ww0RGrzBvSBuY7TkajggpkodrCRSy0W4KMB7iRguKL8x/
+        F8IpsTLVihLr6rUbtnMfIQduXmHeYIQ/0fnlJbqNlg6goOGQnaRnPuKGA1/QpzI6Va/6cRYVMoDTdNcD
+        X3DvJ0R4hXmD+cx0P1QdGoVw0ieel9mkA8y6Tobo1elO/LalZiHDK8wrCJ50TzWd3kQ1TEgZqspWarqm
+        NXW5fn2P+nE2G0DDQ6+pe4V5Bpvax1U2JRxihKAhSC8FdCbdIqRPR+lwJ/hwC9xqhFcY5jc1F68TwnWA
+        Qyc0CkEEbxnCSgWEq5b3ilnvili9um3HnsVbHt3xiHs/ocErzCOsgZm2rJG6lleVlAr5cBY5SIxAerb0
+        YDSl9fA3mVtnkXqo8ArzCCOcRflxpB6vRolnv3gIL9WHa43+GNcWs96R7giBhrPIMXt/ocArzCPcSJ1d
+        GOPSqkbpQoiHsBHBZyHk+nQmJV2siaRnnLhAhwt5k3yvMO/QjXJVA3suHamXBK4pubgS3q8TG5mr/pWv
+        /d7sUHZO9sErzCvMrOv+5jrFiXq3mFx38ORSY93AZ+pTWabjxIMzMeni09m+k2idk5Nsu8/Q4BXmFVbS
+        ZFO+uMSKhida6BJVNkin0kyAOKFXzTrRunsvocErzCvMhLKdNdOWlZSKES7ajuVwCW84/p7TDEODVxgC
+        dH4bplhPN8CPZwkrEcyX0+VM5iKI1jt1+jJmnXsIMRf3CvMMa+R0MkRagClHtO5CiI4HafDxyapVtgwb
+        PBMlRLPuFeYZRrhuho8f19RJyIAQH3Gl5uMayAm4DuVcITzkM0m9wjzD/DiDGbrXKrszMsjhJatEUMWz
+        Wr0NpkjnYumTHZMVmln3CvMOa2Tdf7VeiNGtN4WMSvjyQcJj0vW3Dqdz1muEXwGkjbzt1Brd6AeTXhHC
+        CdgSwg3JxAv3aKuQCjBeYd5hDYwfVbOuU5cps2ZIH47/vuSiBFvOxHMBcYKAnSBDNeteYQiwRiZi1lWl
+        OjsFTcfXqibGZF6u8jYS0Jn4DUqtSw5Fs1fues69lxDgFYYAa2RGsK5ZuvPnsSYK2Rq1CzmkVLacOEtc
+        KYB0Dd46InaJtK1BQzHrXmFoiGfBCLGMajFPXVM0m8mK782QNhSG0znUZeisWR0nDy0n9wpDgTXy4MnB
+        iYaraWcrL8gexSKFS/l+NevEDGj68Qjrwhah7v3kGV5hqcDc8ucBzwEmr1JmL53cqBvvipYrMaKFmlIN
+        g/CRmn1IZ4p080mxKB3Rx5ue+r5F7Hkn3Su8EoB8X8cYaeewBubISd3liaMm0XIlHIIqMd/NLIlcm0EV
+        6WicuuSSXqnOXSq8wlLAODHzvjhJ4FMPPfEEE/jZPYHdmJitMppNaq1zuB0i2zFI0fRAWT3liPluzEkT
+        Ytyx8nLB5sWTDjJSp5reqZruHmGdR+K9wtHgooaf1fz6B26Kz+gEE2Yuf4d9Utg6gz3P2Nlw+oK1f8xp
+        A8z1ZrE9Z4swBZiZocz9ZrvqkXYOxsnjvWB6L8Rz0YQMSq9aQPEQVyo0OIR80fZkGtTE+p1vsicNW4XY
+        fdE2eSHfKywFkMTOhWwqD8mQDSbd2jSAzIUr4znHM2c7xsyFK/6chXyc6stxkFgNNs7fuufkncw8YUIh
+        nYMG5bf11ISLfDnFk5SgiwkrBzRql0e9do8emEfAyHHUnImKZXPbB9LNOrnyKwWvsFRAAloKdn1u+zQf
+        OAkYwliCy2smB9p3AMdHAXZRygI538V84jfdra3T9WcNJ4R0iiQH3ktSuaFBnEBJ57hq0kMmT8T7vbEF
+        ODGGe5wHeD+I9wpLAY0/f+2B3QwuMGZNnrpg3dFfzmLRp7qPL1zX1cmjPQecR+aCnZSKm/rbsqh7qG8v
+        0PcT1G/oPMB32MCPJUJWIPGSVG4Mkh4jTtsu6IE8ZApiddhCBPJxPa7Jv5LEe4WlgKCN0/u1t7OWWxfs
+        C7QgwnMxsQQ7WahcGo7P8D2FvFbwXD6DqfaAHJxBFKBbe+mG+kTq0tDl3izgckCztdpHlsB9xMSnu1aI
+        jPvE5NPxXa3HLbltWQl4haOF3TC+S0lq6Xk7DqD4wzwmwNdlwbAj8MkM6TW4Xgb6vjSqvqaR5fc1PcsQ
+        7iuqlM23cx35PV0kQewgnTTWeHktHYDpWFTouE+CSQkwKc/OWb273zQebXfbtNzwCkcLu1n8KIfS6J/W
+        SFbhNIzgojljNAgNlHzGfa4QzTC5koOmgOT9eCRrEHZtKmJ6Ledz9nwo6PU98uFCf9vuRe4RYrXTofGC
+        +P4w+XEn5bX8F0b97Ax0UCkT7xWWArtRPbgdc6y9WRo+Nm3yxy0vhsSEyEtBO4V8zhpSo2Az1RQ+eF/k
+        fFbJSp7rtd3Xo4Be2we5pg3O2PW1A6Ld3GvyPnJ9zXt8lnvi3rE8oFsUwYK8Th1yJe7JtmU54RWWAtNy
+        6svjF+8QE41PUxMrf46GsUYbKWgsgWqE+EaFNKKWT4HvOxVE1qqY9QHEGyrjvujgdATp7Cnxyfc10KNq
+        J3J1Sycll48PybOFDuUm3SssFUb6La2P/3p8QA0BizRCPMoU/+GRgkbRgEgajFRL0y1MdiL3fadigDiD
+        vDbClUwlWjo39yWd3KJ3JRY/ztmp8mgmHndHgIl/B8Q94tvtyOwgCLebJNee2LD3jfisUP40WimPvka8
+        lObToKrFmHDIlee6XzrPMZG85/leOTDUfZmr4fd1IYQ9CiyQJMDUgBMyhWjR8DRN47+oRaDTJtbKMg/x
+        +yxrYqzfbc9ywCssByxiJ7fWP0TUrVpA78803lDQgE8etZOgCfKoDSkWo643GneHHQ6f+V4lwb1oQYdO
+        yP0ZwUmGwP8zs06mop0zBoGsbvTf0v5TgjQwY+2hfwGsPwc8p47AQBDDvrRhOSN3r7AcsF5JuZNBBY1Y
+        aRA1f0NqeWz+9LU0pjZuEs3Gc9ZiDZi7c4BtMTmacsb6U8kghnOdcsO9L33UzhdrsLoU+U9ihsmvCbwo
+        sLAvDCcUY5q1ILTpxGbiGhtEIg2jbYB72gLPeY/twu280yA0HJiW66IBaQg1weq3nIbT5xq4GMHxVGBr
+        TEgWQll0QEPe0LDj7K4TL517+XuvRVuOvSyE4AvlM6PRcnUVQJ6jhTxyLUUSSaOhRriSLNCyaWyS6XgU
+        UZh1Q/2BTfVZ+2ZDpaMBAVulFjp4heWEmSMm/GkAFw8lxgTrKFNvbAqBRrQ0sPg4sQjUxCc37/mRzgHf
+        dmqNNcKuL7zYq5otmq4lVDqGmwoZ1LcnRHqRfIfOkhJOx5P7In/WkTZJm3BHvJ90EOrjrG3DXTGI45ZJ
+        s+D/0/EBz9FWg+/zoJwanYVXWE7Yzafj1eTmNKJG3NKIqk2HVYPxcfg19kWnHk/Qgsnj+wSAyJjZQsfB
+        x41v3ifkEBnjRyGNaydINdWRZRGPnQuR4hJwFWqq5Z7w0WmgJSQngyD4WO4BDXb/owFCjVTf+3mAV1hu
+        mJbjwzhwDqKI3ukA7OaAn2OzHgj2mbIXz337mod3dj1OLKBWQkfChBglBFMrpJn5zZKqWpmRGdI0Co2m
+        8+EeOpISb592QjogNW+LmF2EQHAWXmElYI1CwELpFS2xM7mzoBHNBLpyfBudhipeOgSKi0DD1VokcUBK
+        6qXI5nNCsOb0aLVF2Uc18Lpx2f5X2NMla665r5AIzsIrrBSGaijTlCzBLrLfxXfqXi9a1RL3gKZDpBU7
+        lFg03qP1FoTxHofmqEbTYQ7riYSWDhmwMM88f7Z2btloAHEQO1otcTsGKQwjTVrCVV8tZGPClVBMPAUO
+        h/CUaP2sgFE5+YxoNZE249T2O8zFY3bNuge2fJrJFhZLhA6vMARYygcgSk08BR7VdEjWgog8Evk7ZFuH
+        IDuQYI3OQgyBu4BUtsn+RF3rl5lnRx6MdvMbVtsOHV5hKDBrwXNI12nKcZqlC/5iDcfki+arn5cOobVs
+        yRLEFRA02iICiJ46fdE/M3cu5I33LgevMDQY6eTr6cJCjbzVxCeaTTUuNuF0DCpZfId0b8rMhu9Dth1G
+        Z9ccrdvJM7zC0GDEcHIBvjjO9SFaq3Ax2VohO6GVMSYU8nlOK5pw86KI80zMR4cehV8OXmGIMJ/OPmoa
+        uUMwaRc+W6t53Tpn3NZ0s9k906Px19lrVDO8whBhWsk5Y1TF1H/bAgEJ4ij42GAE89xZKMFCCPu+uYVq
+        h1cYMkjVKJpoHVyLKZ06UdAWBHDiP2RDun1nrJANvMJQYVquR1bqaNbFy3lNs1nNYosXxhLZwCsMFUae
+        btpXPKqjbVY1w3yzzo3lSzZ0OdbIBl5hqDAC79jwK79WWLAvYlEfr1nJSjTOIkfSMGRjIUDzwSsMFUY4
+        sz5Zr81zVqVCNgsVWb+GbKySDbzCkEE+TVEFTQa6glUIh3jeH8tkA68wRKRpWd+zt3++85fuJ1qngobf
+        Zpkx741Fn52FVxgybHKgpV/VcJpgOeEVhoZsKZT0CzPuFlaquVw6EniFoYLBD8w4ZJsZBzWyB+EVhgAK
+        J5wwhL9mEyFq4mw1Mm1O8Yy7zUaN7IvhFYYCph0xdm3bg7gTIGsBmh9eYciA6BrZQ8MrDA2Y7ZrpHh68
+        whqqF15hDdWKdYX/B8yPE2G4lpGZAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
